welcome.lessons.welcome.methods.picture.PictureMono3.scala.error
PictureMono3:62: error: not found: value diag
diag()
^PictureMono3:63: error: not found: value diag
diag()
^